syntax = "proto3";
package net;
option java_package = "net";
option java_outer_classname = "Ps";
option java_multiple_files = true;

service PS {
    rpc PushAFMatrix (MatrixMessage) returns (MatrixMessage){}
    rpc GetIndexOfSparseDim(SListMessage) returns (SLKVListMessage){}
    rpc GetSparseDimSize(RequestMetaMessage) returns (LMessage){}
    rpc SendSparseDimSizeAndInitParams(InitVMessage) returns (BMessage){}
    rpc Barrier(RequestMetaMessage) returns (BMessage){}
    rpc GetMaxAndMinValueOfEachFeature(MaxAndMinArrayMessage) returns (MaxAndMinArrayMessage){}
    rpc GetNeededParams(PullRequestMessage) returns (SFKVListMessage){}
    rpc SendSFMap(SFKVListMessage) returns (SMessage){};
    rpc SendCurIndexNum(LMessage) returns (SMessage){};
    rpc SendInitedT(IFMessage) returns(IMessage){};
    rpc PushLocalViAccessNum(FMessage) returns(BMessage){};
    rpc PullOtherWorkerAccessForVi(RequestMetaMessage) returns(FMessage){};
    rpc PushVANumAndGetCatPrunedRecord(LIListMessage) returns(LListMessage){};
    rpc PullPartitionedVset(IMessage) returns(ListSetMessage){};
    rpc AddInitedPartitionedVSet(LIMessage) returns (BMessage){};
    rpc PushDiskAccessForV(InsertjIntoViMessage) returns(FMessage){};
    rpc GetLsPartitionedVSet(SMessage) returns(LSetListArrayMessage){};
    rpc PutLsPartitionedVSet(LSetListArrayMessage) returns(SMessage){};
    rpc TestGrpc(IMessage) returns(IMessage){};
    rpc NotifyForSSP(IMessage) returns(BMessage){};
    rpc IsWaiting(ServerIdAndWorkerId) returns(BMessage){};
    rpc SendTrainRoundNum(IMessage) returns(BMessage){};
    rpc NotifyNonMasterIsWaitingWSP(ServerIdAndWorkerId) returns(BMessage){};
    rpc NotifyForWSP(IMessage) returns(BMessage){};
    rpc GetBestPartition(IMessage) returns(PartitionListMessage){};
    rpc SendAFMatrix(AFMatrixMessage) returns(BMessage){};
    rpc SendCommCost(CommCostMessage) returns(VSetMessage){};
    rpc SetBestPartitionList(PartitionListMessage) returns(BMessage){};
    rpc SetLSPartitionVSet(LSetListArrayMessage) returns(BMessage){};
    rpc SendIListMessage(IListMessage) returns(BMessage){};
    rpc SendSparseDimSizeAndInitParamsLMF(InitVMessageLMF) returns(BMessage){};
    rpc GetNeededParamsLMF(PullRequestMessage) returns(SRListMessage){};
    rpc SendGradMapLMF(SRListMessage) returns(SMessage){};
    rpc ShowSomeStatisticAfterTrain(BMessage) returns(BMessage){};
    rpc SendLoss(LossMessage) returns(BMessage){};
    rpc serverSynchronization(HostMessage) returns(BMessage){};

}

message LossMessage{
    int32 ReqHost=1;
    float loss=2;
    int64 startTime=3;
}
message HostMessage{
    int32 reqhost=1;
}

message SRListMessage{
    // 这里sr是string和RowOrColParam
    repeated SRMessage sr=1;
}

message SRMessage{
    string index=1;
    repeated float element=2;
}


message InitVMessageLMF{
    int64 userNum=1;
    int64 movieNum=2;
    int32 r=3;
    repeated ILListKVMessage vSet=4;
}

message CommCostMessage{
    int32 reqHost=1;
    repeated float commCost=2;
}

message VSetMessage{
    repeated LListMessage vSet=1;
}

message AFMatrixMessage{
    repeated RowMessage row=1;
    int32 reqHost=2;
}

message RowMessage{
    repeated int32 col=1;
}


message PartitionListMessage{
    repeated PartitionMessage partition=1;
}

message PartitionMessage{
    repeated int64 dim=1;
}

message ServerIdAndWorkerId{
    int32 serverId=1;
    int32 workerId=2;
}

message LSetListArrayMessage{
    repeated LSetListMessage lSetList=1;
}


message LSetListMessage{
    repeated LSetMessage lSet=1;
}

message LSetMessage{
    repeated LMessage l=1;
}

message FListMessage{
    repeated float f=1;
}

message InsertjIntoViMessage{
    FListMessage diskTimeArray=1;
    int32 insertI=2;
    int64 j=3;
}

message ListSetMessage{
    repeated LListMessage ls=1;
}


message InitVMessage{
    int64 l=1;
    repeated ILListKVMessage list=2;
}


message ILListKVMessage{
    int32 key=1;
    repeated int64 llist=2;
}

message FMessage{
    float f=1;
}
message IFMessage{
    int32 i=1;
    float f=2;
}


message RequestMetaMessage {
    string host = 1;
}

message BMessage{
    bool b=1;
}

message LMessage{
    int64 l=1;
}

message LIMessage{
    int64 l=1;
    int32 i=2;
}

message IMessage{
    int32 i=1;
}





message KeyValueMessage{
    int64 key=1;
    int64 value=2;
}

message SLKVMessage{
    string key=1;
    int64 value=2;
}

message KeyValueListMessage{
    int32 size=1;
    repeated KeyValueMessage keyValueList=2;
}

message MatrixMessage{
    string key=1;
    int32 row=2;
    int32 cols=3;
    repeated float data=4;
}



message IListMessage{
    int32 size=1;
    repeated int32 list=2;
}

message SListMessage{
    int32 size=1;
    repeated string list=2;
}

message PullRequestMessage{
    repeated string neededGradDim=1;
    int32 workerId=2;
    int32 iteration=3;
}

message SSListMessage{
    int32 size=1;
    int32 workerId=2;
    repeated string list=3;
}
message SMessage{
    string str=1;
}

message SLKVListMessage{
    int32 size=1;
    repeated SLKVMessage list=2;
}

message MaxAndMinArrayMessage{
    repeated float max=1;
    repeated float min=2;
}

message SFKVListMessage{
    repeated SFKVMessage list=2;
}

message SFKVMessage{
    string key=1;
    float value=2;
}


message LIListMessage{
    int32 size=1;
    repeated LIMessage list=2;
}

message LListMessage{
    repeated int64 l=2;
}








